fix remove scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,29 @@
 @tailwind utilities;
 
 @layer base {
-    html {
+
+    html,
+    body {
         scroll-behavior: smooth;
-
-        -webkit-scrollbar {
-            display: none;
-        }
-
-        -ms-overflow-style: none;
-        scrollbar-width: none;
+        @apply no-scrollbar
     }
 
+}
+
+@layer utilities {
+
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+        -ms-overflow-style: none;
+        /* IE and Edge */
+        scrollbar-width: none;
+        /* Firefox */
+    }
 }
 
 
